deploy: e33a29d5b8328e39afcd2dac43055eea58594004

--- a/Domains.Poset.html
+++ b/Domains.Poset.html
@@ -100,6 +100,10 @@
 <span class="id" title="keyword">End</span> <a class="idref" href="Domains.Poset.html#Bottom"><span class="id" title="section">Bottom</span></a>.<br/>
 
 <br/>
+#[<span class="id" title="var">export</span>]<br/>
+<span class="id" title="keyword">Hint</span> <span class="id" title="keyword">Extern</span> 0 =&gt; <span class="id" title="tactic">apply</span>: <a class="idref" href="Domains.Poset.html#bottom_is_bottom"><span class="id" title="definition">bottom_is_bottom</span></a> : <span class="id" title="var">core</span>.<br/>
+
+<br/>
 <span class="id" title="keyword">Section</span> <a id="Top" class="idref" href="#Top"><span class="id" title="section">Top</span></a>.<br/>
 &nbsp;&nbsp;<span class="id" title="keyword">Context</span> {<a id="A:33" class="idref" href="#A:33"><span class="id" title="binder">A</span></a> : <a class="idref" href="Domains.Poset.html#type"><span class="id" title="record">BoundedPoset.type</span></a>}.<br/>
 
@@ -117,6 +121,10 @@
 &nbsp;&nbsp;<span class="id" title="keyword">Definition</span> <a id="top_is_top" class="idref" href="#top_is_top"><span class="id" title="definition">top_is_top</span></a> : <a class="idref" href="Domains.Poset.html#is_top"><span class="id" title="definition">is_top</span></a> <a class="idref" href="Domains.Poset.html#top"><span class="id" title="definition">top</span></a> := <a class="idref" href="http://coq.inria.fr/distrib/V8.13.2/stdlib//Coq.Init.Specif.html#proj2_sig"><span class="id" title="definition">proj2_sig</span></a> <a class="idref" href="Domains.Poset.html#top_bundled"><span class="id" title="definition">top_bundled</span></a>.<br/>
 &nbsp;&nbsp;<span class="id" title="keyword">Opaque</span> <a class="idref" href="Domains.Poset.html#top"><span class="id" title="definition">top</span></a>.<br/>
 <span class="id" title="keyword">End</span> <a class="idref" href="Domains.Poset.html#Top"><span class="id" title="section">Top</span></a>.<br/>
+
+<br/>
+#[<span class="id" title="var">export</span>]<br/>
+<span class="id" title="keyword">Hint</span> <span class="id" title="keyword">Extern</span> 0 =&gt; <span class="id" title="tactic">apply</span>: <a class="idref" href="Domains.Poset.html#top_is_top"><span class="id" title="definition">top_is_top</span></a> : <span class="id" title="var">core</span>.<br/>
 
 <br/>
 <span class="id" title="keyword">Notation</span> <a id="1a3a4fd597219ab65145ec13c238adc3" class="idref" href="#1a3a4fd597219ab65145ec13c238adc3"><span class="id" title="notation">&quot;</span></a>⊥" := <a class="idref" href="Domains.Poset.html#bottom"><span class="id" title="definition">bottom</span></a>.<br/>
