deploy: 40856b518ae8033ff3eede6d1d1e48afb7f84333

--- a/indexpage.html
+++ b/indexpage.html
@@ -56,7 +56,7 @@
 <td><a href="indexpage.html#global_Z">Z</a></td>
 <td>_</td>
 <td><a href="indexpage.html#global_*">other</a></td>
-<td>(515 entries)</td>
+<td>(519 entries)</td>
 </tr>
 <tr>
 <td>Notation Index</td>
@@ -120,7 +120,7 @@
 <td><a href="indexpage.html#binder_Z">Z</a></td>
 <td>_</td>
 <td><a href="indexpage.html#binder_*">other</a></td>
-<td>(319 entries)</td>
+<td>(322 entries)</td>
 </tr>
 <tr>
 <td>Module Index</td>
@@ -216,7 +216,7 @@
 <td>Z</td>
 <td>_</td>
 <td><a href="indexpage.html#lemma_*">other</a></td>
-<td>(78 entries)</td>
+<td>(79 entries)</td>
 </tr>
 <tr>
 <td>Axiom Index</td>
@@ -460,6 +460,7 @@
 <a href="Domains.Lift.html#A:53">A:53</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#A:57">A:57</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#A:58">A:58</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#A:61">A:61</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Poset.html#A:68">A:68</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Preorder.html#A:7">A:7</a> [binder, in <a href="Domains.Preorder.html">Domains.Preorder</a>]<br/>
 <a href="Domains.Poset.html#A:73">A:73</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
@@ -467,6 +468,7 @@
 <a href="Domains.Preorder.html#A:9">A:9</a> [binder, in <a href="Domains.Preorder.html">Domains.Preorder</a>]<br/>
 <br/><br/><a id="global_B"></a><h2>B </h2>
 <a href="Domains.Lift.html#bind">bind</a> [definition, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#bind_monotone">bind_monotone</a> [lemma, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Poset.html#bottom">bottom</a> [definition, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#Bottom">Bottom</a> [section, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#bottom_is_bottom">bottom_is_bottom</a> [definition, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
@@ -475,6 +477,7 @@
 <a href="Domains.Path.html#bwd">bwd</a> [lemma, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Lift.html#B:47">B:47</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#B:54">B:54</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#B:59">B:59</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <br/><br/><a id="global_C"></a><h2>C </h2>
 <a href="Domains.Lift.html#candidate_dlub_compute">candidate_dlub_compute</a> [definition, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#candidate_dlub">candidate_dlub</a> [definition, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
@@ -485,7 +488,7 @@
 <a href="Domains.Dcpo.html#cont_mono">cont_mono</a> [lemma, in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
 <a href="Domains.Dcpo.html#cont_preserves_dlub">cont_preserves_dlub</a> [lemma, in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
 <a href="Domains.ClosedModality.html#C:10">C:10</a> [binder, in <a href="Domains.ClosedModality.html">Domains.ClosedModality</a>]<br/>
-<a href="Domains.Lift.html#C:59">C:59</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#C:62">C:62</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <br/><br/><a id="global_D"></a><h2>D </h2>
 <a href="Domains.Dcpo.html">Dcpo</a> [library]<br/>
 <a href="Domains.DcpoExponential.html">DcpoExponential</a> [library]<br/>
@@ -590,11 +593,12 @@
 <a href="Domains.DcpoExponential.html#f:5">f:5</a> [binder, in <a href="Domains.DcpoExponential.html">Domains.DcpoExponential</a>]<br/>
 <a href="Domains.DcpoExponential.html#f:6">f:6</a> [binder, in <a href="Domains.DcpoExponential.html">Domains.DcpoExponential</a>]<br/>
 <a href="Domains.Lift.html#f:60">f:60</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#f:63">f:63</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Poset.html#f:63">f:63</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#F:64">F:64</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
-<a href="Domains.Lift.html#f:67">f:67</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Poset.html#f:67">f:67</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Kleene.html#f:7">f:7</a> [binder, in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
+<a href="Domains.Lift.html#f:70">f:70</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Poset.html#f:74">f:74</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#F:77">F:77</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#f:78">f:78</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
@@ -612,14 +616,14 @@
 <a href="Domains.DcpoExponential.html#g:9">g:9</a> [binder, in <a href="Domains.DcpoExponential.html">Domains.DcpoExponential</a>]<br/>
 <br/><br/><a id="global_H"></a><h2>H </h2>
 <a href="Domains.Path.html#HasPath">HasPath</a> [definition, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
-<a href="Domains.Lift.html#h':66">h':66</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#h':69">h':69</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.DcpoExponential.html#h:14">h:14</a> [binder, in <a href="Domains.DcpoExponential.html">Domains.DcpoExponential</a>]<br/>
 <a href="Domains.Dcpo.html#h:18">h:18</a> [binder, in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
 <a href="Domains.Kleene.html#H:26">H:26</a> [binder, in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
 <a href="Domains.ClosedModality.html#h:27">h:27</a> [binder, in <a href="Domains.ClosedModality.html">Domains.ClosedModality</a>]<br/>
 <a href="Domains.Preamble.html#h:4">h:4</a> [binder, in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
-<a href="Domains.Lift.html#h:62">h:62</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#h:65">h:65</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#h:68">h:68</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Poset.html#h:69">h:69</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Preamble.html#h:8">h:8</a> [binder, in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <br/><br/><a id="global_I"></a><h2>I </h2>
@@ -881,9 +885,9 @@
 <a href="Domains.Poset.html#x:52">x:52</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#x:57">x:57</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#x:59">x:59</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
-<a href="Domains.Lift.html#x:61">x:61</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
-<a href="Domains.Lift.html#x:63">x:63</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#x:64">x:64</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#x:66">x:66</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#x:67">x:67</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Sierpinski.html#x:7">x:7</a> [binder, in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <a href="Domains.Preamble.html#x:7">x:7</a> [binder, in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.Poset.html#x:70">x:70</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
@@ -1001,6 +1005,7 @@
 <a href="Domains.Lift.html#A:53">A:53</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#A:57">A:57</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#A:58">A:58</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#A:61">A:61</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Poset.html#A:68">A:68</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Preorder.html#A:7">A:7</a> [in <a href="Domains.Preorder.html">Domains.Preorder</a>]<br/>
 <a href="Domains.Poset.html#A:73">A:73</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
@@ -1009,10 +1014,11 @@
 <br/><br/><a id="binder_B"></a><h2>B </h2>
 <a href="Domains.Lift.html#B:47">B:47</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#B:54">B:54</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#B:59">B:59</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <br/><br/><a id="binder_C"></a><h2>C </h2>
 <a href="Domains.ClosedModality.html#coh:20">coh:20</a> [in <a href="Domains.ClosedModality.html">Domains.ClosedModality</a>]<br/>
 <a href="Domains.ClosedModality.html#C:10">C:10</a> [in <a href="Domains.ClosedModality.html">Domains.ClosedModality</a>]<br/>
-<a href="Domains.Lift.html#C:59">C:59</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#C:62">C:62</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <br/><br/><a id="binder_D"></a><h2>D </h2>
 <a href="Domains.DcpoProduct.html#dirA:12">dirA:12</a> [in <a href="Domains.DcpoProduct.html">Domains.DcpoProduct</a>]<br/>
 <a href="Domains.Lift.html#dirF:25">dirF:25</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
@@ -1088,11 +1094,12 @@
 <a href="Domains.DcpoExponential.html#f:5">f:5</a> [in <a href="Domains.DcpoExponential.html">Domains.DcpoExponential</a>]<br/>
 <a href="Domains.DcpoExponential.html#f:6">f:6</a> [in <a href="Domains.DcpoExponential.html">Domains.DcpoExponential</a>]<br/>
 <a href="Domains.Lift.html#f:60">f:60</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#f:63">f:63</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Poset.html#f:63">f:63</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#F:64">F:64</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
-<a href="Domains.Lift.html#f:67">f:67</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Poset.html#f:67">f:67</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Kleene.html#f:7">f:7</a> [in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
+<a href="Domains.Lift.html#f:70">f:70</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Poset.html#f:74">f:74</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#F:77">F:77</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#f:78">f:78</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
@@ -1108,14 +1115,14 @@
 <a href="Domains.Poset.html#g:79">g:79</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.DcpoExponential.html#g:9">g:9</a> [in <a href="Domains.DcpoExponential.html">Domains.DcpoExponential</a>]<br/>
 <br/><br/><a id="binder_H"></a><h2>H </h2>
-<a href="Domains.Lift.html#h':66">h':66</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#h':69">h':69</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.DcpoExponential.html#h:14">h:14</a> [in <a href="Domains.DcpoExponential.html">Domains.DcpoExponential</a>]<br/>
 <a href="Domains.Dcpo.html#h:18">h:18</a> [in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
 <a href="Domains.Kleene.html#H:26">H:26</a> [in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
 <a href="Domains.ClosedModality.html#h:27">h:27</a> [in <a href="Domains.ClosedModality.html">Domains.ClosedModality</a>]<br/>
 <a href="Domains.Preamble.html#h:4">h:4</a> [in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
-<a href="Domains.Lift.html#h:62">h:62</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#h:65">h:65</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#h:68">h:68</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Poset.html#h:69">h:69</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Preamble.html#h:8">h:8</a> [in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <br/><br/><a id="binder_I"></a><h2>I </h2>
@@ -1249,9 +1256,9 @@
 <a href="Domains.Poset.html#x:52">x:52</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#x:57">x:57</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#x:59">x:59</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
-<a href="Domains.Lift.html#x:61">x:61</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
-<a href="Domains.Lift.html#x:63">x:63</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#x:64">x:64</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#x:66">x:66</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Lift.html#x:67">x:67</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Sierpinski.html#x:7">x:7</a> [in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <a href="Domains.Preamble.html#x:7">x:7</a> [in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.Poset.html#x:70">x:70</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
@@ -1333,6 +1340,7 @@
 <a href="Domains.Lift.html#alg_cont">alg_cont</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#alg_fam_dir">alg_fam_dir</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <br/><br/><a id="lemma_B"></a><h2>B </h2>
+<a href="Domains.Lift.html#bind_monotone">bind_monotone</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Poset.html#bottom_is_unique">bottom_is_unique</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Path.html#bwd">bwd</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <br/><br/><a id="lemma_C"></a><h2>C </h2>
@@ -1607,7 +1615,7 @@
 <td><a href="indexpage.html#global_Z">Z</a></td>
 <td>_</td>
 <td><a href="indexpage.html#global_*">other</a></td>
-<td>(515 entries)</td>
+<td>(519 entries)</td>
 </tr>
 <tr>
 <td>Notation Index</td>
@@ -1671,7 +1679,7 @@
 <td><a href="indexpage.html#binder_Z">Z</a></td>
 <td>_</td>
 <td><a href="indexpage.html#binder_*">other</a></td>
-<td>(319 entries)</td>
+<td>(322 entries)</td>
 </tr>
 <tr>
 <td>Module Index</td>
@@ -1767,7 +1775,7 @@
 <td>Z</td>
 <td>_</td>
 <td><a href="indexpage.html#lemma_*">other</a></td>
-<td>(78 entries)</td>
+<td>(79 entries)</td>
 </tr>
 <tr>
 <td>Axiom Index</td>
