deploy: 50949125ad4e346d676d8281719db6fd728bd7a5

--- a/indexpage.html
+++ b/indexpage.html
@@ -56,7 +56,7 @@
 <td><a href="indexpage.html#global_Z">Z</a></td>
 <td>_</td>
 <td><a href="indexpage.html#global_*">other</a></td>
-<td>(713 entries)</td>
+<td>(724 entries)</td>
 </tr>
 <tr>
 <td>Notation Index</td>
@@ -75,7 +75,7 @@
 <td>M</td>
 <td>N</td>
 <td>O</td>
-<td>P</td>
+<td><a href="indexpage.html#notation_P">P</a></td>
 <td>Q</td>
 <td>R</td>
 <td>S</td>
@@ -88,7 +88,7 @@
 <td>Z</td>
 <td>_</td>
 <td><a href="indexpage.html#notation_*">other</a></td>
-<td>(4 entries)</td>
+<td>(6 entries)</td>
 </tr>
 <tr>
 <td>Binder Index</td>
@@ -120,7 +120,7 @@
 <td><a href="indexpage.html#binder_Z">Z</a></td>
 <td>_</td>
 <td><a href="indexpage.html#binder_*">other</a></td>
-<td>(457 entries)</td>
+<td>(461 entries)</td>
 </tr>
 <tr>
 <td>Module Index</td>
@@ -312,7 +312,7 @@
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(29 entries)</td>
+<td>(30 entries)</td>
 </tr>
 <tr>
 <td>Abbreviation Index</td>
@@ -376,7 +376,7 @@
 <td>Z</td>
 <td>_</td>
 <td><a href="indexpage.html#definition_*">other</a></td>
-<td>(70 entries)</td>
+<td>(74 entries)</td>
 </tr>
 <tr>
 <td>Record Index</td>
@@ -624,6 +624,7 @@
 <a href="Domains.Kleene.html#f:2">f:2</a> [binder, in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
 <a href="Domains.Preamble.html#f:20">f:20</a> [binder, in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.Kleene.html#f:21">f:21</a> [binder, in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
+<a href="Domains.Path.html#F:22">F:22</a> [binder, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.DcpoExponential.html#f:22">f:22</a> [binder, in <a href="Domains.DcpoExponential.html">Domains.DcpoExponential</a>]<br/>
 <a href="Domains.Kleene.html#f:23">f:23</a> [binder, in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
 <a href="Domains.ILift.html#F:23">F:23</a> [binder, in <a href="Domains.ILift.html">Domains.ILift</a>]<br/>
@@ -842,11 +843,17 @@
 <a href="Domains.DcpoProduct.html#pair_right_continous">pair_right_continous</a> [lemma, in <a href="Domains.DcpoProduct.html">Domains.DcpoProduct</a>]<br/>
 <a href="Domains.DcpoProduct.html#pair_left_continous">pair_left_continous</a> [lemma, in <a href="Domains.DcpoProduct.html">Domains.DcpoProduct</a>]<br/>
 <a href="Domains.Path.html#Path">Path</a> [definition, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#Path">Path</a> [section, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Path.html">Path</a> [library]<br/>
-<a href="Domains.Path.html#PathFromLt">PathFromLt</a> [section, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
-<a href="Domains.Path.html#PathFromLt.Family">PathFromLt.Family</a> [section, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Path.html#path_fam_directed">path_fam_directed</a> [lemma, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Path.html#path_fam">path_fam</a> [definition, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#Path.PathFromLt">Path.PathFromLt</a> [section, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#Path.PathFromLt.Family">Path.PathFromLt.Family</a> [section, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#e85040110defe6e9f6e411e63841b77a">_ ⟿ _</a> [notation, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#phoa_fwd_bwd">phoa_fwd_bwd</a> [definition, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#phoa_bwd_fwd">phoa_bwd_fwd</a> [definition, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#phoa_bwd">phoa_bwd</a> [definition, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#phoa_fwd">phoa_fwd</a> [definition, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Poset.html">Poset</a> [library]<br/>
 <a href="Domains.Kleene.html#pow">pow</a> [definition, in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
 <a href="Domains.Kleene.html#pow_chain_directed">pow_chain_directed</a> [lemma, in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
@@ -1021,6 +1028,7 @@
 <a href="Domains.Dcpo.html#x:22">x:22</a> [binder, in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
 <a href="Domains.Sierpinski.html#x:23">x:23</a> [binder, in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <a href="Domains.Poset.html#x:23">x:23</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
+<a href="Domains.Path.html#x:23">x:23</a> [binder, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Preamble.html#x:23">x:23</a> [binder, in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.ILift.html#x:25">x:25</a> [binder, in <a href="Domains.ILift.html">Domains.ILift</a>]<br/>
 <a href="Domains.Dcpo.html#x:25">x:25</a> [binder, in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
@@ -1130,7 +1138,8 @@
 <a href="Domains.Sierpinski.html#z:6">z:6</a> [binder, in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <br/><br/><a id="global_*"></a><h2>other </h2>
 <a href="Domains.Preorder.html#c95735e1ce88a615473bb7a182512341">_ ≤ _ (preorder_scope)</a> [notation, in <a href="Domains.Preorder.html">Domains.Preorder</a>]<br/>
-<a href="Domains.Path.html#68e5aac5be7cf8a48dda96c5ef051ec5">_ ⟿ _</a> [notation, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#aca3f99a04fd31b76b91f85c03362684">Σ/=&gt;</a> [notation, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#79f7468fba418dd07c14093328e0b451">Σ^Σ</a> [notation, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Poset.html#276a4a3018138118cad52558d0b71a10">⊤</a> [notation, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#1a3a4fd597219ab65145ec13c238adc3">⊥</a> [notation, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Sierpinski.html#e15c0eb40e61adefe95778c26e7840f6">Σ</a> [definition, in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
@@ -1146,7 +1155,9 @@
 <a href="Domains.Sierpinski.html#72c97f28cd24a881b73005ab099f7468">Σ_ltT</a> [lemma, in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <a href="Domains.Sierpinski.html#a0721939e2045067b7728f50816f03bc">Σ_ltR</a> [lemma, in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <a href="Domains.Sierpinski.html#be8c5147e42876137cad9ba9e86306f8">Σ_lt</a> [definition, in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
+<a href="Domains.Path.html#ef26ae4298a9a0ef9ca97f80f9ba5b5f">ψ:21</a> [binder, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Sierpinski.html#6e332a617b7a94a63f8523db7232c691">ϕ:19</a> [binder, in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
+<a href="Domains.Path.html#2fa927698f05924ab30f4b064f7779df">ϕ:20</a> [binder, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.ClosedModality.html#aa7c94a1e42b3c77775620ccbbda923c">ϕ:3</a> [binder, in <a href="Domains.ClosedModality.html">Domains.ClosedModality</a>]<br/>
 <a href="Domains.ClosedModality.html#10a89d3ca8a0101d7983dca5cf18d933">ϕ:33</a> [binder, in <a href="Domains.ClosedModality.html">Domains.ClosedModality</a>]<br/>
 <a href="Domains.UNat.html#e566ef19fb746ac6f2981d92fb484e65">ϕ:36</a> [binder, in <a href="Domains.UNat.html">Domains.UNat</a>]<br/>
@@ -1155,9 +1166,12 @@
 <a href="Domains.Path.html#5e76c360202c99a327bea23eba28565f">ϕ:9</a> [binder, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <br/><br/><hr/>
 <h1>Notation Index</h1>
-<a id="notation_*"></a><h2>other </h2>
+<a id="notation_P"></a><h2>P </h2>
+<a href="Domains.Path.html#e85040110defe6e9f6e411e63841b77a">_ ⟿ _</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<br/><br/><a id="notation_*"></a><h2>other </h2>
 <a href="Domains.Preorder.html#c95735e1ce88a615473bb7a182512341">_ ≤ _ (preorder_scope)</a> [in <a href="Domains.Preorder.html">Domains.Preorder</a>]<br/>
-<a href="Domains.Path.html#68e5aac5be7cf8a48dda96c5ef051ec5">_ ⟿ _</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#aca3f99a04fd31b76b91f85c03362684">Σ/=&gt;</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#79f7468fba418dd07c14093328e0b451">Σ^Σ</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Poset.html#276a4a3018138118cad52558d0b71a10">⊤</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Poset.html#1a3a4fd597219ab65145ec13c238adc3">⊥</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <br/><br/><hr/>
@@ -1304,6 +1318,7 @@
 <a href="Domains.Kleene.html#f:2">f:2</a> [in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
 <a href="Domains.Preamble.html#f:20">f:20</a> [in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.Kleene.html#f:21">f:21</a> [in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
+<a href="Domains.Path.html#F:22">F:22</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.DcpoExponential.html#f:22">f:22</a> [in <a href="Domains.DcpoExponential.html">Domains.DcpoExponential</a>]<br/>
 <a href="Domains.Kleene.html#f:23">f:23</a> [in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
 <a href="Domains.ILift.html#F:23">F:23</a> [in <a href="Domains.ILift.html">Domains.ILift</a>]<br/>
@@ -1529,6 +1544,7 @@
 <a href="Domains.Dcpo.html#x:22">x:22</a> [in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
 <a href="Domains.Sierpinski.html#x:23">x:23</a> [in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <a href="Domains.Poset.html#x:23">x:23</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
+<a href="Domains.Path.html#x:23">x:23</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Preamble.html#x:23">x:23</a> [in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.ILift.html#x:25">x:25</a> [in <a href="Domains.ILift.html">Domains.ILift</a>]<br/>
 <a href="Domains.Dcpo.html#x:25">x:25</a> [in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
@@ -1637,7 +1653,9 @@
 <a href="Domains.Poset.html#z:58">z:58</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
 <a href="Domains.Sierpinski.html#z:6">z:6</a> [in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <br/><br/><a id="binder_*"></a><h2>other </h2>
+<a href="Domains.Path.html#ef26ae4298a9a0ef9ca97f80f9ba5b5f">ψ:21</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Sierpinski.html#6e332a617b7a94a63f8523db7232c691">ϕ:19</a> [in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
+<a href="Domains.Path.html#2fa927698f05924ab30f4b064f7779df">ϕ:20</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.ClosedModality.html#aa7c94a1e42b3c77775620ccbbda923c">ϕ:3</a> [in <a href="Domains.ClosedModality.html">Domains.ClosedModality</a>]<br/>
 <a href="Domains.ClosedModality.html#10a89d3ca8a0101d7983dca5cf18d933">ϕ:33</a> [in <a href="Domains.ClosedModality.html">Domains.ClosedModality</a>]<br/>
 <a href="Domains.UNat.html#e566ef19fb746ac6f2981d92fb484e65">ϕ:36</a> [in <a href="Domains.UNat.html">Domains.UNat</a>]<br/>
@@ -1863,8 +1881,9 @@
 <a href="Domains.Lift.html#Monad">Monad</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.ILift.html#Monad">Monad</a> [in <a href="Domains.ILift.html">Domains.ILift</a>]<br/>
 <br/><br/><a id="section_P"></a><h2>P </h2>
-<a href="Domains.Path.html#PathFromLt">PathFromLt</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
-<a href="Domains.Path.html#PathFromLt.Family">PathFromLt.Family</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#Path">Path</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#Path.PathFromLt">Path.PathFromLt</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#Path.PathFromLt.Family">Path.PathFromLt.Family</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.DcpoProduct.html#Product">Product</a> [in <a href="Domains.DcpoProduct.html">Domains.DcpoProduct</a>]<br/>
 <a href="Domains.DcpoProduct.html#Product.DLub">Product.DLub</a> [in <a href="Domains.DcpoProduct.html">Domains.DcpoProduct</a>]<br/>
 <br/><br/><a id="section_T"></a><h2>T </h2>
@@ -1948,6 +1967,10 @@
 <br/><br/><a id="definition_P"></a><h2>P </h2>
 <a href="Domains.Path.html#Path">Path</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Path.html#path_fam">path_fam</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#phoa_fwd_bwd">phoa_fwd_bwd</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#phoa_bwd_fwd">phoa_bwd_fwd</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#phoa_bwd">phoa_bwd</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#phoa_fwd">phoa_fwd</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Kleene.html#pow">pow</a> [in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
 <a href="Domains.Kleene.html#pow_family">pow_family</a> [in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
 <a href="Domains.Dcpo.html#preserves_dlub">preserves_dlub</a> [in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
@@ -2012,7 +2035,7 @@
 <td><a href="indexpage.html#global_Z">Z</a></td>
 <td>_</td>
 <td><a href="indexpage.html#global_*">other</a></td>
-<td>(713 entries)</td>
+<td>(724 entries)</td>
 </tr>
 <tr>
 <td>Notation Index</td>
@@ -2031,7 +2054,7 @@
 <td>M</td>
 <td>N</td>
 <td>O</td>
-<td>P</td>
+<td><a href="indexpage.html#notation_P">P</a></td>
 <td>Q</td>
 <td>R</td>
 <td>S</td>
@@ -2044,7 +2067,7 @@
 <td>Z</td>
 <td>_</td>
 <td><a href="indexpage.html#notation_*">other</a></td>
-<td>(4 entries)</td>
+<td>(6 entries)</td>
 </tr>
 <tr>
 <td>Binder Index</td>
@@ -2076,7 +2099,7 @@
 <td><a href="indexpage.html#binder_Z">Z</a></td>
 <td>_</td>
 <td><a href="indexpage.html#binder_*">other</a></td>
-<td>(457 entries)</td>
+<td>(461 entries)</td>
 </tr>
 <tr>
 <td>Module Index</td>
@@ -2268,7 +2291,7 @@
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(29 entries)</td>
+<td>(30 entries)</td>
 </tr>
 <tr>
 <td>Abbreviation Index</td>
@@ -2332,7 +2355,7 @@
 <td>Z</td>
 <td>_</td>
 <td><a href="indexpage.html#definition_*">other</a></td>
-<td>(70 entries)</td>
+<td>(74 entries)</td>
 </tr>
 <tr>
 <td>Record Index</td>
